--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"build": "pnpx esbuild . --bundle --platform=node --target=node18 --outfile=dist/build.js && pnpx pkg ./dist/build.js -c package.json -t node18-win-x64"
 	},
 	"keywords": [],
 	"author": "",
@@ -17,5 +18,13 @@
 		"obs-websocket-js": "^5.0.3",
 		"tail": "^2.2.6"
 	},
-	"type": "module"
+	"type": "module",
+	"bin": "index.js",
+	"pkg": {
+		"assets": [],
+		"targets": [
+			"node18-win-x64"
+		],
+		"outputPath": "./dist"
+	}
 }
